Bug 1763451, when refresh rate is very high, don't let it affect idle processing in the parent process too much, r=mstange,a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D143357